--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,13 +6,15 @@
     max-width: 700px
   .logo
     width: 132px
+  .search
+    &__input
+      width: 340px
   .navbar
     &-top
       padding-top: 30px
       padding-bottom: 30px
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
@@ -34,6 +36,7 @@
         flex-direction: column
         height: 11px
         width: 16px
+        padding: 0
         border: none
         background-color: #fff
         &__line
